action_value: use SystemVerilog for formal verification

--- a/sim/Makefile
+++ b/sim/Makefile
@@ -1,14 +1,14 @@
 
 rtl_dir := ../rtl
 
-vpath %.v $(rtl_dir)
+vpath %.sv $(rtl_dir)
 
 all: testbench.vvp
 
 test: testbench.vvp
 	vvp -N -l- $< -vcd +dump=$(<:.vvp=.vcd) +seed=$(shell echo $$RANDOM) >/dev/null 2>$(<:.vvp=.log)
 
-testbench.vvp: testbench.sv action_value.v
+testbench.vvp: testbench.sv action_value.sv
 	iverilog -Y.sv -y$(rtl_dir) -g2012 -u -Wall -tvvp -o $@ $<
 
 clean:
