--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -6,7 +6,7 @@ icestick.bin: icestick.asc
 icestick.asc: icestick.json
 	nextpnr-ice40 --json $< --pcf $(@:.asc=.pcf) --asc $@
 
-icestick.json: icestick.v transmit.v receive.v action_value.v
+icestick.json: icestick.v transmit.v receive.v action_value.sv
 	yosys -p "synth_ice40 -json $@" $^
 
 clean:
