--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -4,10 +4,10 @@ icestick.bin: icestick.asc
 	icepack $< $@
 
 icestick.asc: icestick.json
-	nextpnr-ice40 --json $< --pcf $(@:.asc=.pcf) --asc $@
+	nextpnr-ice40 --quiet --json $< --pcf $(@:.asc=.pcf) --asc $@
 
 icestick.json: icestick.v transmit.v receive.v action_value.sv
-	yosys -p "synth_ice40 -json $@" $^
+	yosys -q -l $(@:.json=.log) -p "synth_ice40 -json $@" $^
 
 clean:
-	-$(RM) *.asc *.bin *.json
+	-$(RM) *.asc *.bin *.json *.log
